# A.R.T.I.S.T

./: Presentation.pptx  README.md
code/: esp32_main.py  hello.js  lidar.py  lidar_data.py
code/ROS/: Obstacle_detection.py  cmds.py
code/arduino_code/: PID_encoder.ino  aca.docx  motor_manipulation.ino  ros_comm.ino
code/camera_module/: camera_module.ino
code/lidar_connection/client/: boot.py  request.py
code/lidar_connection/server/: main.py
setup/: hn.js
workspaces/: data.py  publisher.py  subs.py  subscriber.py
workspaces/artist_ws/.catkin_tools/profiles/default/: devel_collisions.txt
workspaces/artist_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
workspaces/artist_ws/devel/.private/astar_search/: .catkin  setup.sh
workspaces/artist_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
workspaces/artist_ws/devel/lib/astar_search/: test
workspaces/artist_ws/devel/lib/pkgconfig/: astar_search.pc  catkin_tools_prebuild.pc
workspaces/artist_ws/src/astar_search/: CMakeLists.txt  package.xml  setup.py
workspaces/artist_ws/src/astar_search/launch/: algorithm_visualization.launch
workspaces/artist_ws/src/astar_search/nodes/: astar_algorithm
workspaces/canegazebo/canegazebo/: CMakeLists.txt  package.xml
workspaces/canegazebo/canegazebo/config/: joint_names_canegazebo.yaml
workspaces/canegazebo/canegazebo/launch/: display.launch  gazebo.launch
workspaces/canegazebo/canegazebo/urdf/: canegazebo.csv  canegazebo.urdf
(+11 files in other folders)
